# imgproc

./: .gitignore  CMakeLists.txt  CProc.cpp  CProc.h  CTest.cpp  ImgUtils.cpp  ImgUtils.h  README.md  ctest  findPerimeter.cpp  findRegion.cpp  findSmoothPerimeter.cpp  polyfit.cpp  polyfit.h
